<resources>
    <string name="app_name">Vivanuncios</string>
    <string name="logout">Cerrar sesión</string>
    <string name="loggingout">Cerrando sesión</string>
    <string name="none"></string>
    <string name="invite_fb_friends">Invitar amigos en Facebook</string>
    <string name="my_profile">Mi perfil</string>
    <string name="publish">PUBLICAR</string>
    <string name="drawer_open">Abierto</string>
    <string name="drawer_close">Cerrado</string>
    <string name="all_feed_filter">Novedades</string>
    <string name="only_mine_filter">Mis Anuncios</string>
    <string name="feeds_no_result_msg">¡Vaya! No hay notificaciones para mostrar</string>
    <string name="feeds_no_result_hint">Seguro recibirás algunas pronto</string>
    <string name="details">Detalles del ítem</string>
    <string name="sell_title">Vender</string>
    <string name="sell_item_confirm_message">Selecciona esta opción sólo después de haber concretado la venta, cuando el comprador haya retirado el artículo y recibas el dinero.</string>
    <string name="republish_item_confirm_title">Republicar</string>
    <string name="republish_item_confirm_message">¿Estás seguro que deseas republicar tu anuncio?</string>
    <string name="item_republished">El ítem fue republicado con éxito</string>
    <string name="share_selector">Compartir el ítem a</string>
    <string name="item_share_subject">Mira este ítem en Vivanuncios</string>
    <string name="item_share_body">Ingresa a Vivanuncios a ver el ítem en</string>
    <string name="item_sold">Ítem vendido</string>
    <string name="item_reported">Aviso reportado</string>
    <string name="item_negociate_unable_title">Ítem no disponible</string>
    <string name="item_negociate_unable_message">El ítem no está disponible en este momento</string>
    <string name="item_groups_list_all">Listar todos</string>
    <string name="report_item">Reportar aviso</string>
    <string name="error_reporting_item">No se pudo reportar el ítem, intente nuevamente</string>
    <string name="no_group">Sin grupo asignado</string>
    <string name="item_set_as_sold">Marcar como vendido</string>
    <string name="item_groups_list_title">Lista de Grupos</string>
    <string name="like_menu">Me gusta</string>
    <string name="title_activity_login">Ingresar con e-mail</string>
    <string name="title_navdrawer_login">Ingresar</string>
    <string name="enter_valid_email">El e-mail ingresado no es válido</string>
    <string name="username_or_email">Ingresa tu e-mail</string>
    <string name="enter_email_rec">Por favor ingresa tu correo electrónico</string>
    <string name="password">Ingresa tu contraseña</string>
    <string name="login">INGRESAR</string>
    <string name="register_label">Regístrate</string>
    <string name="forgot_password">¿Recuperar contraseña?</string>
    <string name="enter_with_cred">Ingresa con tus credenciales</string>
    <string name="facebook_login">Ingresa con Facebook</string>
    <string name="terms_of_service_text">Al registrarse está aceptando los</string>
    <string name="terms_of_service_fb">Al ingresar con Facebook está aceptando los</string>
    <string name="terms_of_service">Términos de uso y Políticas de Privacidad</string>
    <string name="legal_dec">Declaración Legal</string>
    <string name="invalid_user_pass">El nombre de usuario y/o contraseña son incorrectos</string>
    <string name="error_generic">Ocurrió un error, por favor intente más tarde</string>
    <string name="linked_with_fb_success">Vinculado a Facebook correctamente</string>
    <string name="linked_with_tw_success">Vinculado a Twitter correctamente</string>
    <string name="unlinked_from_tw_success">Desvinculado de Twitter correctamente</string>
    <string name="unlinked_from_fb_success">Desvinculado de Facebook correctamente</string>
    <string name="error_facebook_result">Hubo un error temporal conectándose a Facebook o canceló el login manualmente. Por favor, intente nuevamente</string>
    <string name="all_mandatory_fields">Todos los campos son obligatorios</string>
    <string name="enter_with_sms">número móvil</string>
    <string name="enter_with_email">e-mail</string>
    <string name="registration_title">Registrarse con e-mail</string>
    <string name="registration_button_text">REGISTRARSE</string>
    <string name="registration_button_text_finish">Finalizar</string>
    <string name="pick_name">Nombre</string>
    <string name="pick_username">Nombre de usuario</string>
    <string name="choose_password">Contraseña</string>
    <string name="repeat_password">Repite la contraseña</string>
    <string name="password_no_match">Las contraseñas no coinciden</string>
    <string name="zip_code">ZIP code</string>
    <string name="invalid_zip_code">Ingresa un ZIP code válido</string>
    <string name="invalid_regist_zip_code">Ingresa un zip code válido (USA &amp; PR)</string>
    <string name="enter_email">Ingresa tu e-mail</string>
    <string name="error_save_image">No se pudo guardar la imagen, por favor intente de nuevo</string>
    <string name="already_taken_email">Email duplicado</string>
    <string name="error_img_upload">No se pudo subir la foto de perfil</string>
    <string name="check_registration_info">Todos los campos son obligatorios</string>
    <string name="incorrect_password">La contraseña debe tener entre 6 y 15 caracteres</string>
    <string name="re_enter_email">Reingresa tu e-mail</string>
    <string name="pick_lastname">Apellido</string>
    <string name="enter_zip_code">Zip Code (limitado a USA)</string>
    <string name="edit_regist_location_label">¿No es tu ubicación?</string>
    <string name="email_match_confirmation">Las direcciones de e-mail no coinciden</string>
    <string name="invalid_name">El nombre debe tener entre %1$d y %2$d letras</string>
    <string name="invalid_lastname">El apellido debe tener entre %1$d y %2$d letras</string>
    <string name="invalid_username">El nombre de usuario debe tener entre %1$d y %2$d caracteres</string>
    <string name="address_output_string">%1$s, %2$s</string>
    <string name="buy_items_navdrawer_title">Comprar</string>
    <string name="search_hint">Ingresa tu búsqueda</string>
    <string name="filter">Filtros de ítems</string>
    <string name="ready">Listo</string>
    <string name="so_ready">¡Listo!</string>
    <string name="title_user_groups">Grupos suscriptos</string>
    <string name="description">Descripción</string>
    <string name="select_category">p.ej. Deportes</string>
    <string name="what_selling">p.ej. Bicicleta de paseo</string>
    <string name="share_on">Compartir en</string>
    <string name="invalid_price">Ingresa un precio mayor a $ 0</string>
    <string name="invalid_item_name">Ingresa un nombre de entre %1$d y %2$d caracteres alfanuméricos</string>
    <string name="invalid_item_description">La descripción del ítem no puede contener dos puntos ni punto y coma</string>
    <string name="publish_picture_not_selected">Debes seleccionar una foto de portada</string>
    <string name="publish_cancel">¿Estás seguro que deseas cancelar?</string>
    <string name="unable_to_load_groups">Imposible cargar grupos</string>
    <string name="add_a_group">Agregar/quitar grupos</string>
    <string name="check_fields_with_errors">Revise los campos con errores</string>
    <string name="error_select_category">Debes seleccionar una categoría</string>
    <string name="title_publish">Anunciar</string>
    <string name="title_publish_edit">Editar anuncio</string>
    <string name="location_label">¿Dónde quieres encontrarte con tus compradores?</string>
    <string name="edit_location_label">¿No es esta tu ubicación?</string>
    <string name="edit_location_message">Modificar</string>
    <string name="image_loading_unsoported">El tipo de imagen seleccionado no es soportado</string>
    <string name="update_empty">El campo no puede quedar vacío</string>
    <string name="update_user_unauthorized">El usuario no está autorizado</string>
    <string name="update_item_not_found">Ítem no encontrado.</string>
    <string name="update_item_doesnt_belong_to_user">Ítem no pertenece al usuario</string>
    <string name="delete_successfully">Eliminación exitosa</string>
    <string name="delete_failed">Falló la eliminación</string>
    <string name="delete_item_confirm">¿Estás seguro que deseas eliminar este anuncio?</string>
    <string name="deleting_picture">Error elminando foto</string>
    <string name="delete_picture_not_found">Imagen no encontrada</string>
    <string name="delete_picture_cannot_be_deleted">La imagen no puede ser borrada</string>
    <string name="title_navdrawer_groups">Grupos</string>
    <string name="group_details">Detalles del grupo</string>
    <string name="create_group_successfully">Grupo creado exitosamente</string>
    <string name="update_group_successfully">Grupo actualizado exitosamente</string>
    <string name="delete_group_successfully">Grupo eliminado exitosamente</string>
    <string name="invalid_group_name">Ingresa un nombre de entre %1$d y %2$d caracteres alfanuméricos</string>
    <string name="invalid_group_description">La descripción del grupo no puede contener dos puntos ni punto y coma</string>
    <string name="group_name">Nombre del Grupo</string>
    <string name="group_name_hint">Ingresa un nombre</string>
    <string name="group_description">Ingresa una descripción</string>
    <string name="subscribe">Suscribir</string>
    <string name="unsubscribe">Suscripto</string>
    <string name="group_zip_limited">(limitado a USA)</string>
    <string name="group_publish">Publicar</string>
    <string name="group_share_on">Comparte tu grupo en:</string>
    <string name="create_group">Crear Grupo</string>
    <string name="edit_group">Editar Grupo</string>
    <string name="group_select_all">Seleccionar todos</string>
    <string name="group_select_descrip">Tu ítem será publicado en todos los grupos seleccionados</string>
    <string name="group_tab_info">Perfil Grupal</string>
    <string name="group_tab_items">Items del Grupo</string>
    <string name="group_tab_users">Usuarios Suscriptos</string>
    <string name="group_share_selector">Compartir grupo en</string>
    <string name="group_share_subject">Mira este grupo en Vivanuncios</string>
    <string name="change_password">Modificar contraseña</string>
    <string name="about">Sobre Viva</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="social">Social</string>
    <string name="terms_of_service_nocapitals"><u>términos de uso y políticas de privacidad.</u></string>
    <string name="notifications_push_config">Notificaciones Push</string>
    <string name="invite_my_friends">Enviar invitación a mis amigos</string>
    <string name="account">Cuenta</string>
    <string name="configuration">Configuración</string>
    <string name="linked_accounts">Cuentas vinculadas</string>
    <string name="terms_conditions">Términos y Condiciones</string>
    <string name="connect_easily">Conéctate fácil y rápido</string>
    <string name="connect_account_kit">o ingresa sin contraseña usando</string>
    <string name="find_your_fb_friends">Encuentra a tus amigos de Facebook</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="not_have_account">¿Todavía no tienes tu cuenta creada? Regístrate</string>
    <string name="here"><u>aquí</u></string>
    <string name="send">ENVIAR</string>
    <string name="set_valid_email">Ingresa un e-mail válido</string>
    <string name="set_password_hint">Por favor ingresa tu dirección de correo electrónico para que podamos enviarte una contraseña provisoria a tu casilla. Luego podrás modificarla en las opciones dentro de tu cuenta.</string>
    <string name="set_password_ok">Hemos enviado una contraseña provisoria a tu casilla de e-mail. Revisa tu bandeja de entrada y sigue las indicaciones para comenzar a usar Viva.</string>
</resources>