<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GrayBackground"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/login_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/GrayBackground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_background_white"
            android:elevation="5dp"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingBottom="25dp">

            <com.ebay.park.views.TextViewDemi
                android:id="@+id/tv_ready"
                style="@style/Label.DarkGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:paddingRight="5dp"
                android:text="@string/so_ready"
                android:textSize="16sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <com.ebay.park.views.TextViewBook
                android:id="@+id/tv_email_sent"
                style="@style/Label.DarkGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:paddingRight="5dp"
                android:text="@string/set_password_ok"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <com.ebay.park.views.TextViewBook
                android:id="@+id/tv_enter_email"
                style="@style/Label.DarkGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:paddingRight="5dp"
                android:text="@string/set_password_hint"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.ebay.park.views.EditTextBook
                android:id="@+id/et_username"
                style="@style/CustomInput.Register"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_with_email"
                android:inputType="text"
                android:paddingLeft="13dp" />

            <com.ebay.park.views.TextViewBook
                android:id="@+id/tv_login_failed"
                style="@style/Label.Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="left"
                android:text="@string/set_valid_email"
                android:visibility="gone" />

            <com.ebay.park.views.ButtonDemi
                android:id="@+id/btn_send"
                style="@style/LoginButton"
                android:layout_width="188dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/make_offer_button_selector"
                android:text="@string/send" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.ebay.park.views.TextViewBook
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/not_have_account"
                android:textColor="@color/VivaLightBlue"
                android:textSize="14sp" />

            <com.ebay.park.views.TextViewBook
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="3dp"
                android:text="@string/here"
                android:textColor="@color/VivaLightBlue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <com.ebay.park.views.TextViewBook
                android:id="@+id/tvLoginTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/terms_of_service_text"
                android:textColor="@color/system_notification"
                android:textSize="11sp" />

            <com.ebay.park.views.TextViewBook
                android:id="@+id/tvTermsLink"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="25dp"
                android:text="@string/terms_of_service"
                android:textColor="@color/VivaLightBlue"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>