<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/GrayBackground"
            android:fillViewport="true">

    <LinearLayout
        android:id="@+id/login_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:background="@color/VivaTurquoise"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="13dp"
            android:src="@drawable/icon_close" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="83dp"
            android:contentDescription="Vivanuncios"
            android:src="@drawable/logo_viva" />

        <com.ebay.park.views.TextViewBook
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_easily"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/White"/>

        <com.ebay.park.views.CustomFbLoginButton
            android:id="@+id/btn_fb_login"
            style="@style/Button.Facebook2"
            android:layout_width="265dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="13dp"
            android:paddingTop="13dp" />

        <com.ebay.park.views.TextViewBook
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_account_kit"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:textColor="@color/White"/>

        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="19dp">

            <com.ebay.park.views.ButtonDemi
                android:id="@+id/btn_register_accountkit_mail"
                style="@style/Button.Register"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19dp"
                android:layout_marginRight="4dp"
                android:stateListAnimator="@null"
                android:text="@string/enter_with_email"/>

            <com.ebay.park.views.ButtonDemi
                android:id="@+id/btn_register_accountkit_sms"
                style="@style/Button.Register"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:stateListAnimator="@null"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19dp"
                android:text="@string/enter_with_sms"/>

        </LinearLayout>

        <com.ebay.park.views.TextViewBook
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="45dp"
            android:textColor="@color/White"/>

        <com.ebay.park.views.TextViewDemi
            android:id="@+id/tv_cred_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_with_cred"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:drawablePadding="7dp"
            android:drawableRight="@drawable/arrow_right"
            android:layout_marginTop="15dp"
            android:textColor="@color/White"/>

        <TextView
            android:id="@+id/tv_login_failed"
            style="@style/ErrorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/invalid_user_pass"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">

            <com.ebay.park.views.TextViewBook
                android:id="@+id/tvLoginTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/terms_of_service_text"
                android:textColor="@color/VivaTermsDarkBlue"
                android:textSize="11sp" />

            <com.ebay.park.views.TextViewBook
                android:id="@+id/tvTermsLink"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service_nocapitals"
                android:textColor="@color/VivaTermsDarkBlue"
                android:textSize="11sp"
                android:textStyle=""/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>